--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<nav>
-  <a routerLink="full-members" routerLinkActive="selected">Full Members</a>
-  <a routerLink="pending-members" routerLinkActive="selected">Pending Members</a>
-  <a routerLink="deactivated-members" routerLinkActive="selected">Deactivates Members</a>
+<nav class="nav nav-pills nav-justified">
+  <a class="nav-link" routerLink="full-members" routerLinkActive="selected">Full Members</a>
+  <a class="nav-link" routerLink="pending-members" routerLinkActive="selected">Pending Members</a>
+  <a class="nav-link" routerLink="deactivated-members" routerLinkActive="selected">Deactivates Members</a>
 </nav>
 
 <router-outlet></router-outlet>
