--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,3 +1,5 @@
-<p>
-  members works!
-</p>
+<nav class="nav nav-pills nav-justified">
+  <a class="nav-link" routerLink="members/full-members" routerLinkActive="selected">Full Members</a>
+  <a class="nav-link" routerLink="members/pending-members" routerLinkActive="selected">Pending Members</a>
+  <a class="nav-link" routerLink="members/deactivated-members" routerLinkActive="selected">Deactivates Members</a>
+</nav>
