learn some knew functions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
 
 <app-navigation></app-navigation>
 <router-outlet></router-outlet>
+
+<!--<child-comp></child-comp>-->
+<!--<button (click)="counter.increment()">+</button>-->
+<!--<button (click)="counter.decrement()">-</button>-->
+
+<!--<p #nameText>{{name}}</p>-->
+<!--<p>{{nameText.textContent}}</p>-->
+<!--<button (click)="change()">Change</button>-->
+
+<child-comp>
+  <h3 #headerContent>Welcome {{name}}!</h3>
+</child-comp>
