--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,5 +1,6 @@
 <nav class="nav nav-pills nav-justified">
-  <a class="nav-link" routerLink="members/full-members" routerLinkActive="selected">Full Members</a>
-  <a class="nav-link" routerLink="members/pending-members" routerLinkActive="selected">Pending Members</a>
-  <a class="nav-link" routerLink="members/deactivated-members" routerLinkActive="selected">Deactivates Members</a>
+  <a class="nav-link" routerLink="full-members" routerLinkActive="selected">Full Members</a>
+  <a class="nav-link" routerLink="pending-members" routerLinkActive="selected">Pending Members</a>
+  <a class="nav-link" routerLink="deactivated-members" routerLinkActive="selected">Deactivates Members</a>
 </nav>
+<router-outlet></router-outlet>
