--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -14,6 +14,10 @@
       <li routerLinkActive="selected">
         <a routerLink="billing">Billing</a>
       </li>
+      <!-- Test-->
+      <!--<li routerLinkActive="selected">-->
+        <!--<a routerLink="members/full-members">Full-members</a>-->
+      <!--</li>-->
     </ul>
   </nav>
 </div>
