--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,115 @@
 <!--<ng-template #elseBlock>Else template</ng-template>-->
 <!--<button (click)="toggle()">Toggle</button>-->
 
-<ul>
+<!-- <ul>
   <li *ngFor="let item of items">{{item}}</li>
-</ul>
+</ul> -->
+
+<!-- <div class="col-xs-8"> 
+  <div class="form-group">
+      <label>Название модели</label>
+      <input class="form-control" name="title" [(ngModel)]="title" />
+  </div>
+  <div class="form-group">
+      <label>Цена</label>
+      <input type="number" class="form-control" name="price" [(ngModel)]="price" />
+  </div>
+  <div class="form-group">
+      <label>Производитель</label>
+      <select class="form-control" name="company" [(ngModel)]="company">
+          <option  *ngFor="let comp of companies" [value]="comp">
+              {{comp}}
+          </option>
+      </select>
+  </div>
+  <div class="form-group">
+      <button class="btn btn-default" (click)="addPhone(title, price, company)">Добавить</button>
+  </div>
+</div>
+<div><h3>Добавленные элементы</h3>
+  <ul *ngFor="let p of phones">
+      <li>{{p.title}} ({{p.company}}) - {{p.price}}</li>
+  </ul>
+</div> -->
+<!-- 
+<div class="col-xs-10"> 
+  <div class="form-group">
+      <label>Название модели</label>
+      <input class="form-control" name="title" [(ngModel)]="phone.title" />
+  </div>
+  <div class="form-group">
+      <label>Цена</label>
+      <input type="number" class="form-control" name="price" [(ngModel)]="phone.price" />
+  </div>
+  <div class="form-group">
+      <label>Производитель</label>
+      <select class="form-control" name="company" [(ngModel)]="phone.company">
+          <option  *ngFor="let comp of companies" [value]="comp">
+              {{comp}}
+          </option>
+      </select>
+  </div>
+  <div class="form-group">
+      <button class="btn btn-default" (click)="addPhone()">Добавить</button>
+  </div>
+</div>
+<div><h3>Добавленные элементы</h3>
+  <ul *ngFor="let p of phones">
+      <li>{{p.title}} ({{p.company}}) - {{p.price}}</li>
+  </ul>
+</div> -->
+
+<h1>Список пользователей</h1>
+<input type="button" value="Добавить" class="btn btn-default" (click)="addUser()" />
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <td>Id</td>
+            <td>Имя</td>
+            <td>Возраст</td>
+            <td></td>
+            <td></td>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let user of users">
+            <ng-template [ngTemplateOutlet]="loadTemplate(user)" 
+                        [ngTemplateOutletContext]="{ $implicit: user}">
+            </ng-template>
+        </tr>
+    </tbody>
+</table>
+<div>{{statusMessage}}</div>
+   
+   
+<!--шаблон для чтения-->
+<ng-template #readOnlyTemplate let-user>
+    <td>{{user.Id}}</td>
+    <td>{{user.Name}}</td>
+    <td>{{user.Age}}</td>
+    <td>
+        <input type="button" value="Изменить" class="btn btn-default" (click)="editUser(user)" />
+    </td>
+    <td>
+        <input type="button" value="Удалить" (click)="deleteUser(user)" class="btn btn-danger" />
+    </td>
+</ng-template>
+  
+<!--шаблон для редактирования-->
+<ng-template #editTemplate>
+    <td>
+        <input type="text" [(ngModel)]="editedUser.Id" readonly disabled class="form-control" />
+    </td>
+    <td>
+        <input type="text" [(ngModel)]="editedUser.Name" class="form-control" />
+    </td>
+    <td>
+        <input type="text" [(ngModel)]="editedUser.Age" class="form-control" />
+    </td>
+    <td>
+        <input type="button" value="Сохранить" (click)="saveUser()" class="btn btn-success" />
+    </td>
+    <td>
+        <input type="button" value="Отмена" (click)="cancel()" class="btn btn-warning" />
+    </td>
+</ng-template>
