--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,3 +19,6 @@
 nav a.selected {
   text-decoration-color: yellow;
 }
+
+input.ng-touched.ng-invalid { border: solid red 2px; }
+input.ng-touched.ng-valid { border: solid green 2px}
