--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,6 +1,8 @@
+<button (click)="openFormModal()">Open Modal</button>
 <nav class="nav nav-pills nav-justified">
   <a class="nav-link" routerLink="full-members" routerLinkActive="selected">Full Members</a>
   <a class="nav-link" routerLink="pending-members" routerLinkActive="selected">Pending Members</a>
   <a class="nav-link" routerLink="deactivated-members" routerLinkActive="selected">Deactivates Members</a>
 </nav>
+
 <router-outlet></router-outlet>
