--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -96,57 +96,92 @@
   </ul>
 </div> -->
 
-<h1>Список пользователей</h1>
-<input type="button" value="Добавить" class="btn btn-default" (click)="addUser()" />
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <td>Id</td>
-            <td>Имя</td>
-            <td>Возраст</td>
-            <td></td>
-            <td></td>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let user of users">
-            <ng-template [ngTemplateOutlet]="loadTemplate(user)" 
-                        [ngTemplateOutletContext]="{ $implicit: user}">
-            </ng-template>
-        </tr>
-    </tbody>
-</table>
-<div>{{statusMessage}}</div>
-   
-   
-<!--шаблон для чтения-->
-<ng-template #readOnlyTemplate let-user>
-    <td>{{user.Id}}</td>
-    <td>{{user.Name}}</td>
-    <td>{{user.Age}}</td>
-    <td>
-        <input type="button" value="Изменить" class="btn btn-default" (click)="editUser(user)" />
-    </td>
-    <td>
-        <input type="button" value="Удалить" (click)="deleteUser(user)" class="btn btn-danger" />
-    </td>
-</ng-template>
-  
-<!--шаблон для редактирования-->
-<ng-template #editTemplate>
-    <td>
-        <input type="text" [(ngModel)]="editedUser.Id" readonly disabled class="form-control" />
-    </td>
-    <td>
-        <input type="text" [(ngModel)]="editedUser.Name" class="form-control" />
-    </td>
-    <td>
-        <input type="text" [(ngModel)]="editedUser.Age" class="form-control" />
-    </td>
-    <td>
-        <input type="button" value="Сохранить" (click)="saveUser()" class="btn btn-success" />
-    </td>
-    <td>
-        <input type="button" value="Отмена" (click)="cancel()" class="btn btn-warning" />
-    </td>
-</ng-template>
+<!-- <div class="col-xs-10"> 
+  <div class="form-group">
+      <label>Название модели</label>
+      <input class="form-control" name="title"
+          [(ngModel)]="phone.title" #phoneTitle="ngModel"
+          (ngModelChange)="onTitleChange()" />
+  </div>
+  <div class="form-group">
+      <label>Цена</label>
+      <input type="number" class="form-control" name="price"
+          [(ngModel)]="phone.price" #phonePrice="ngModel" />
+  </div>
+  <div class="form-group">
+      <label>Производитель</label>
+      <select class="form-control" name="company"
+          [(ngModel)]="phone.company" #phoneCompany="ngModel">
+          <option  *ngFor="let comp of companies" [value]="comp">
+              {{comp}}
+          </option>
+      </select>
+  </div>
+  <div class="form-group">
+      <button class="btn btn-default" (click)="addPhone(phoneTitle, phonePrice, phoneCompany)">
+          Добавить
+      </button>
+  </div>
+  <div>
+      <p>{{phoneTitle.name}} : {{phoneTitle.model}}</p>
+      <p>{{phonePrice.name}} : {{phonePrice.model}}</p>
+      <p>{{phoneCompany.name}} : {{phoneCompany.model}}</p>
+  </div>
+</div> -->
+<!-- 
+<form #myForm="ngForm" novalidate (ngSubmit)="onSubmit(myForm)">
+  <div class="form-group">
+    <label>Name</label>
+    <input class="form-control" name="name" [(ngModel)]="name" required/>
+  </div>
+  <div class="form-group">
+    <label>Email</label>
+    <input class="form-control" name="email" ngModel required email/>
+  </div>
+  <div class="form-group">
+    <label>Telefon</label>
+    <input class="form-control" name="phone" ngModel required pattern="[0-9]{10}" />
+   </div>
+   <div class="form-group">
+    <button [disabled]="myForm.invalid"
+      class="btn btn-default" (click)="submit(myForm)">Add</button>
+  </div> -->
+  <!-- <div class="form-group">
+    <input type="submit" [disabled]="myForm.invalid" class="btn btn-default" value="Submit">
+  </div>
+</form>
+<div>Name: {{myForm.value.name}}</div>
+<div>Name: {{myForm.value.email}}</div> -->
+
+<!-- <form [formGroup]="myForm" novalidate (ngSubmit)="submit()">
+  <div class="form-group">
+    <label>Name</label>
+    <input class="form-control" name="name" formControlName="userName" />
+    <div class="alert alert-danger"
+      *ngIf="myForm.controls['userName'].invalid && myForm.controls['userName'].touched">
+      You don't specified name
+    </div>
+  </div>
+  <div class="form-group">
+    <label>Email</label>
+    <input class="form-control" name="email" formControlName="userEmail">
+    <div class="alert alert-danger"
+      *ngIf="myForm.controls['userEmail'].invalid && myForm.controls['userEmail'].touched">
+      Incorect email
+    </div>
+  </div>
+  <div formArrayName="phones">
+    <div class="form-group" *ngFor="let phone of myForm.controls['phones'].controls; let i = index">
+        <label>Телефон</label>
+        <input class="form-control" formControlName="{{i}}" />
+    </div>
+  </div>
+  <div class="form-group">
+      <button class="btn btn-default" (click)="addPhone()">
+          Добавить телефон
+      </button>
+      <button class="btn btn-default" [disabled]="myForm.invalid">
+          Отправить
+      </button>
+  </div>
+</form> -->
